noinst_HEADERS = \
	a_reset.h \
	abis_nm.h \
	abis_om2000.h \
	abis_rsl.h \
	arfcn_range_encode.h \
	bsc_msc.h \
	bsc_msg_filter.h \
	bsc_nat.h \
	bsc_nat_callstats.h \
	bsc_nat_sccp.h \
	bsc_rll.h \
	bsc_subscriber.h \
	bss.h \
	bts_ipaccess_nanobts_omlattr.h \
	chan_alloc.h \
	common.h \
	common_bsc.h \
	common_cs.h \
	ctrl.h \
	debug.h \
	e1_config.h \
	gsm_04_08_utils.h \
	gsm_04_80.h \
	gsm_data.h \
	gsm_data_shared.h \
	handover.h \
	handover_cfg.h \
	handover_decision.h \
	handover_vty.h \
	ipaccess.h \
	meas_feed.h \
	meas_rep.h \
	misdn.h \
	nat_rewrite_trie.h \
	network_listen.h \
	openbscdefines.h \
	osmo_bsc.h \
	osmo_bsc_grace.h \
	osmo_bsc_mgcp.h \
	osmo_bsc_rf.h \
	osmo_bsc_sigtran.h \
	bsc_msc_data.h \
	osmux.h \
	paging.h \
	pcu_if.h \
	pcuif_proto.h \
	rest_octets.h \
	rs232.h \
	signal.h \
	system_information.h \
	ussd.h \
	vty.h \
	bsc_api.h \
	$(NULL)
