noinst_HEADERS = \
	a_reset.h \
	abis_nm.h \
	abis_om2000.h \
	abis_rsl.h \
	acc_ramp.h \
	arfcn_range_encode.h \
	assignment_fsm.h \
	bsc_msg_filter.h \
	bsc_rll.h \
	bsc_subscriber.h \
	bsc_subscr_conn_fsm.h \
	bss.h \
	bts_ipaccess_nanobts_omlattr.h \
	chan_alloc.h \
	codec_pref.h \
	ctrl.h \
	debug.h \
	e1_config.h \
	gsm_04_08_rr.h \
	gsm_04_80.h \
	gsm_data.h \
	handover.h \
	handover_cfg.h \
	handover_decision.h \
	handover_decision_2.h \
	handover_fsm.h \
	handover_vty.h \
	ipaccess.h \
	lchan_fsm.h \
	lchan_rtp_fsm.h \
	lchan_select.h \
	meas_feed.h \
	meas_rep.h \
	misdn.h \
	neighbor_ident.h \
	network_listen.h \
	openbscdefines.h \
	osmo_bsc.h \
	osmo_bsc_grace.h \
	osmo_bsc_rf.h \
	osmo_bsc_sigtran.h \
	bsc_msc_data.h \
	osmux.h \
	paging.h \
	pcu_if.h \
	pcuif_proto.h \
	rest_octets.h \
	rs232.h \
	signal.h \
	system_information.h \
	timeslot_fsm.h \
	ussd.h \
	vty.h \
	gsm_08_08.h \
	penalty_timers.h \
	osmo_bsc_lcls.h \
	$(NULL)
